--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-jwt": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "netlify-lambda": "^2.0.14",
+    "node-gyp": "^8.2.0",
     "pg": "^8.7.1",
     "pg-native": "^3.0.0",
     "serverless-http": "^2.7.0",
