--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chokidar": "^3.5.2",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
@@ -19,7 +20,6 @@
     "express-jwt": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "netlify-lambda": "^2.0.14",
-    "node-gyp": "^8.2.0",
     "pg": "^8.7.1",
     "pg-native": "^3.0.0",
     "serverless-http": "^2.7.0",
