--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "crypto-js": "^4.1.1",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "express-jwt": "^6.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "pg": "^8.7.1",
-    "uuid": "^8.3.2"
+    "cors": "~2.8.5",
+    "crypto-js": "~4.1.1",
+    "dotenv": "~10.0.0",
+    "express": "~4.17.1",
+    "express-jwt": "~6.0.0",
+    "helmet": "~4.6.0",
+    "jsonwebtoken": "~8.5.1",
+    "pg": "~8.7.1",
+    "uuid": "~8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
